[package]
name = "vinci-quiz"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "vinci_quiz"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "=0.27.0", features = [ "init-if-needed" ] }
anchor-spl = "=0.27.0"
solana-program = "=1.14.16"
winnow = "=0.4.1"
toml_datetime = "=0.6.0"
